milestone 3 updates